--- a/views/admin/confirm-password/confirm-password.hbs
+++ b/views/admin/confirm-password/confirm-password.hbs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Forgot Password</title>
     <meta charset="UTF-8">
@@ -11,8 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
     <div class="container pt-5">
         <div class="row">
@@ -22,14 +26,17 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-6 pt-5">
                 <h2 class="main-text pt-5 mt-5">Confirm <br> Your Password</h2>
                 <div class="input-group mt-5">
-                    <input type="password" id="password" placeholder="Enter Your Password" class="form-control main-input">
+                    <input type="password" id="password" placeholder="Enter Your Password"
+                        class="form-control main-input">
                     <button class="btn btn-outline-secondary" type="button" id="togglePasswordBtn" style="border:none">
                         <i class="ri-eye-line" id="eyeIcon"></i>
                     </button>
                 </div>
                 <div class="input-group mt-5">
-                    <input type="password" id="confirmPassword" placeholder="Reenter Your Password" class="form-control main-input">
-                    <button class="btn btn-outline-secondary" type="button" id="toggleConfirmPasswordBtn" style="border:none">
+                    <input type="password" id="confirmPassword" placeholder="Reenter Your Password"
+                        class="form-control main-input">
+                    <button class="btn btn-outline-secondary" type="button" id="toggleConfirmPasswordBtn"
+                        style="border:none">
                         <i class="ri-eye-line" id="confirmEyeIcon"></i>
                     </button>
                 </div>
@@ -44,8 +51,8 @@
             </div>
         </div>
     </div>
-    <script src="./javascripts/jquery.js"></script>
-    <script src="./javascripts/bootstrap5.js"></script>
+    <script src="/javascripts/jquery.js"></script>
+    <script src="/javascripts/bootstrap5.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const passwordInput = document.getElementById("password");
@@ -77,4 +84,5 @@
         });
     </script>
 </body>
+
 </html>
