--- a/views/admin/edit/edit.hbs
+++ b/views/admin/edit/edit.hbs
@@ -1,28 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./stylesheets/admin-add.css">
-</head>
-<body>
+<style>
+    @import url(/stylesheets/admin-add.css);
+</style>
 
 <div class="container">
     <div class="admin-product-form-container centered">
-
-        <form action="" method="post" enctype="multipart/form-data">
+        <form action="/product/edit/{{product._id}}?_method=PUT" method="post" enctype="multipart/form-data">
             <h3 class="title">update the product</h3>
-            <input type="text" class="box" name="product_name" placeholder="Enter the product name">
-            <input type="number" min="0" class="box" name="product_price" placeholder="Enter the product price">
+            <input type="text" class="box" name="name" placeholder="Enter the product name" value="{{product.name}}">
+            <input type="number" min="0" class="box" name="price" placeholder="Enter the product price">
             <input type="number" min="0" class="box" name="product_quantity" placeholder="Enter the product quantity">
             <input type="file" class="box" name="product_image" accept="image/png, image/jpeg, image/jpg">
             <input type="submit" value="update product" name="update_product" class="btn">
             <a href="./add/add.hbs" class="btn">go back!</a>
         </form>
 
+
     </div>
 </div>
-
-</body>
-</html>
