--- a/views/admin/home/admin.hbs
+++ b/views/admin/home/admin.hbs
@@ -1,28 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    @import url(/stylesheets/admin.css);
+</style>
+<style>
+    @import url(/stylesheets/bootstrap.min.css);
+</style>
+{{!-- <style>
+    @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
+</style> --}}
+<style>
+    @import url(https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css);
+</style>
+<style>
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css);
+</style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- start: Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-    <!-- start: Icons -->
-    <!-- start: CSS -->
-    <link rel="stylesheet" href="./stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" href="./stylesheets/admin.css">
-    <!-- end: CSS -->
-    <!-- start: JS -->
-    <script src="../javascripts/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
-        integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./javascripts/bootstrap.bundle.min.js"></script>
-    <script src="./javascripts/admin.js"></script>
-    <!-- end: JS -->
-    <title>Admin Page</title>
-</head>
+<script src="../javascripts/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
+    integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./javascripts/bootstrap.bundle.min.js"></script>
+<script src="./javascripts/admin.js"></script>
 
 <body>
     <!-- start: Sidebar -->
@@ -47,22 +44,22 @@
                 </a>
                 <ul class="sidebar-dropdown-menu">
                     <li class="sidebar-dropdown-menu-item">
-                        <a href="./home/home.hbs">
+                        <a href="/admin/adminhome">
                             Dashboard
                         </a>
                     </li>
                     <li class="sidebar-dropdown-menu-item">
-                        <a href="./account/admin-account.hbs">
+                        <a href="/admin/account">
                             Manage Users
                         </a>
                     </li>
                     <li class="sidebar-dropdown-menu-item">
-                        <a href="./delivery/delivery.hbs">
+                        <a href="/admin/delivery">
                             Manage Deliveries
                         </a>
                     </li>
                     <li class="sidebar-dropdown-menu-item">
-                        <a href="./contact.hbs">
+                        <a href="/admin/contact">
                             Contact Us
                         </a>
                     </li>
@@ -313,6 +310,3 @@
 
     </main>
     <!-- end: Main -->
-</body>
-
-</html>
