--- a/views/admin/edit/edit.hbs
+++ b/views/admin/edit/edit.hbs
@@ -6,7 +6,7 @@
     <div class="admin-product-form-container centered">
         <form action="/product/edit/{{product._id}}?_method=PUT" method="post" enctype="multipart/form-data">
             <h3 class="title">update the product</h3>
-            <input type="text" class="box" name="name" placeholder="Enter the product name" value="{{product.name}}">
+            <input type="text" class="box" name="name" placeholder="{{product.name}}">
             <input type="number" min="0" class="box" name="price" placeholder="Enter the product price">
             <input type="number" min="0" class="box" name="product_quantity" placeholder="Enter the product quantity">
             <input type="file" class="box" name="product_image" accept="image/png, image/jpeg, image/jpg">
