--- a/public/stylesheets/admin-add.css
+++ b/public/stylesheets/admin-add.css
@@ -130,7 +130,46 @@ html {
 }
 
 
+.check-box-group {
+    display: flex;
+    flex-wrap: wrap;
+    /* Allow flex items to wrap to the next row */
+}
 
+.custom-checkbox {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    flex: 0 0 calc(33.33% - 20px);
+    /* Distribute items evenly, with margins between them */
+    box-sizing: border-box;
+    /* Include padding and border in the element's total width and height */
+}
+
+.custom-checkbox .label {
+    font-size: 1.2em;
+    margin: 0 10px;
+}
+
+.custom-checkbox .checkmark {
+    width: 35px;
+    height: 35px;
+    border: 2px solid #222;
+    display: inline-block;
+    border-radius: 3px;
+    background: #222 url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/White_check.svg/1200px-White_check.svg.png) center/1250% no-repeat;
+    transition: background-size 0.2s ease;
+}
+
+.custom-checkbox input:checked+.checkmark {
+    background-size: 60%;
+    transition: background-size 0.25s cubic-bezier(0.7, 0, 0.18, 1.24);
+}
+
+.custom-checkbox input {
+    display: none;
+}
 
 
 
