--- a/views/admin/delivery/delivery.hbs
+++ b/views/admin/delivery/delivery.hbs
@@ -36,22 +36,22 @@
             </a>
             <ul class="sidebar-dropdown-menu">
                 <li class="sidebar-dropdown-menu-item">
-                    <a href="./admin.hbs">
+                    <a href="/admin">
                         Dashboard
                     </a>
                 </li>
                 <li class="sidebar-dropdown-menu-item">
-                    <a href="./admin-account.hbs">
+                    <a href="/admin/account">
                         Manage Users
                     </a>
                 </li>
                 <li class="sidebar-dropdown-menu-item">
-                    <a href="./delivery.hbs">
+                    <a href="/admin/delivery">
                         Manage Deliveries
                     </a>
                 </li>
                 <li class="sidebar-dropdown-menu-item">
-                    <a href="./contact.hbs">
+                    <a href="">
                         Contact Us
                     </a>
                 </li>
