--- a/views/admin/contact/contact.hbs
+++ b/views/admin/contact/contact.hbs
@@ -1,37 +1,327 @@
-<!DOCTYPE html>
-<html lang="en">
+<style>
+    @import url(/stylesheets/admin-product.css);
+</style>
+<style>
+    @import url(/stylesheets/bootstrap.min.css);
+</style>
+<style>
+    @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
+</style>
+<style>
+    @import url(https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css);
+</style>
+<style>
+    @import url(https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css);
+</style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> CONTACT-US</title>
-    <link rel="stylesheet" href="./stylesheets/contact.css">
-</head>
-<div class="container">
-    <div class="formbx">
-        <form action="">
-            <h2>Contact Us</h2>
-            <div class="inputbox">
-                <input type="text" required="required">
-                <span>Full Name</span>
-            </div>
-            <div class="inputbox">
-                <input type="email" required="required">
-                <span>Email Address</span>
-            </div>
-            <div class="inputbox">
-               <textarea name="" id="" cols="30" rows="10" required></textarea>
-               <span>Type Your Message Here...</span>
-            </div>
-            <div class="inputbox">
-                <input type="submit" value="send">
-            </div>
-        </form>
+<!-- start: Sidebar -->
+<div class="sidebar position-fixed top-0 bottom-0 bg-white border-end">
+    <div class="d-flex align-items-center p-3">
+        <a href="#" class="sidebar-logo text-uppercase fw-bold text-decoration-none text-indigo fs-4">Admin Page</a>
+        <i class="sidebar-toggle ri-arrow-left-circle-line ms-auto fs-5 d-none d-md-block"></i>
     </div>
-    <div class="imgbx"><img src="./images/contactus.svg" alt=""></div>
+    <ul class="sidebar-menu p-3 m-0 mb-0">
+        <li class="sidebar-menu-item active">
+            <a href="#">
+                <i class="ri-dashboard-line sidebar-menu-item-icon"></i>
+                Manage Deliveries
+            </a>
+        </li>
+        <li class="sidebar-menu-divider mt-3 mb-1 text-uppercase">Consumer</li>
+        <li class="sidebar-menu-item has-dropdown">
+            <a href="#">
+                <i class="ri-pages-line sidebar-menu-item-icon"></i>
+                Pages
+                <i class="ri-arrow-down-s-line sidebar-menu-item-accordion ms-auto"></i>
+            </a>
+            <ul class="sidebar-dropdown-menu">
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="/admin">
+                        Dashboard
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="/admin/account">
+                        Manage Users
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="/admin/delivery">
+                        Manage Deliveries
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="">
+                        Contact Us
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href=".profile.hbs">
+                        Admin Profile
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="sidebar-menu-item has-dropdown">
+            <a href="#">
+                <i class="ri-user-line sidebar-menu-item-icon"></i>
+                Authentication
+                <i class="ri-arrow-down-s-line sidebar-menu-item-accordion ms-auto"></i>
+            </a>
+            <ul class="sidebar-dropdown-menu">
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="./login.hbs">
+                        Login
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="./login/login.hbs">
+                        Registration
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="./change-password/change-password.hbs">
+                        Change Password
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="./confirm-password/confirm-password.hbs">
+                        Confirm Password
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="sidebar-menu-item has-dropdown">
+            <a href="#">
+                <i class="ri-window-line sidebar-menu-item-icon"></i>
+                Widgets
+                <i class="ri-arrow-down-s-line sidebar-menu-item-accordion ms-auto"></i>
+            </a>
+            <ul class="sidebar-dropdown-menu">
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="#">
+                        Charts
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="#">
+                        Tables
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="sidebar-menu-divider mt-3 mb-1 text-uppercase">Webs</li>
+        <li class="sidebar-menu-item has-dropdown">
+            <a href="#">
+                <i class="ri-shopping-cart-2-line sidebar-menu-item-icon"></i>
+                Shopping Web
+                <i class="ri-arrow-down-s-line sidebar-menu-item-accordion ms-auto"></i>
+            </a>
+            <ul class="sidebar-dropdown-menu">
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="#">
+                        Shop
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="#">
+                        Checkout
+                    </a>
+                </li>
+                <li class="sidebar-dropdown-menu-item">
+                    <a href="#">
+                        Details
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li class="sidebar-menu-item">
+            <a href="#">
+                <i class="ri-mail-line sidebar-menu-item-icon"></i>
+                Email
+            </a>
+        </li>
+        <li class="sidebar-menu-item">
+            <a href="./calendar/calendar.hbs">
+                <i class="ri-calendar-line sidebar-menu-item-icon"></i>
+                Calendar
+            </a>
+        </li>
+    </ul>
 </div>
-<body>
-    
-</body>
+<div class="sidebar-overlay"></div>
+<!-- end: Sidebar -->
 
-</html>
+<!-- start: Main -->
+<main class="bg-light">
+    <div class="p-2">
+        <!-- start: Navbar -->
+        <nav class="px-3 py-2 bg-white rounded shadow-sm">
+            <i class="ri-menu-line sidebar-toggle me-3 d-block d-md-none"></i>
+            <h5 class="fw-bold mb-0 me-auto">Manage Products</h5>
+            <div class="dropdown me-3 d-none d-sm-block">
+                <div class="cursor-pointer dropdown-toggle navbar-link" data-bs-toggle="dropdown" aria-expanded="false">
+                    <i class="ri-notification-line"></i>
+                </div>
+                <div class="dropdown-menu fx-dropdown-menu">
+                    <h5 class="p-3 bg-indigo text-light">Notification</h5>
+                    <div class="list-group list-group-flush">
+                        <a href="#"
+                            class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+                            <div class="me-auto">
+                                <div class="fw-semibold">Notification</div>
+                                <span class="fs-7">Product Processing</span>
+                            </div>
+                            <span class="badge bg-primary rounded-pill">14</span>
+                        </a>
+                        <a href="#"
+                            class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+                            <div class="me-auto">
+                                <div class="fw-semibold">Notification</div>
+                                <span class="fs-7">Product Processing</span>
+                            </div>
+                            <span class="badge bg-primary rounded-pill">14</span>
+                        </a>
+                        <a href="#"
+                            class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+                            <div class="me-auto">
+                                <div class="fw-semibold">Notification</div>
+                                <span class="fs-7">Product Processing</span>
+                            </div>
+                            <span class="badge bg-primary rounded-pill">10</span>
+                        </a>
+                        <a href="#"
+                            class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+                            <div class="me-auto">
+                                <div class="fw-semibold">Notification</div>
+                                <span class="fs-7">Product Processing</span>
+                            </div>
+                            <span class="badge bg-primary rounded-pill">10</span>
+                        </a>
+                        <a href="#"
+                            class="list-group-item list-group-item-action d-flex justify-content-between align-items-start">
+                            <div class="me-auto">
+                                <div class="fw-semibold">Notification</div>
+                                <span class="fs-7">Product Completed</span>
+                            </div>
+                            <span class="badge bg-primary rounded-pill">10</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="dropdown">
+                <div class="d-flex align-items-center cursor-pointer dropdown-toggle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <span class="me-2 d-none d-sm-block">Trịnh Xuân Bách</span>
+                    <img class="navbar-profile-image" src="./images/profile.png" alt="Image">
+                </div>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="./profile/profile.hbs">Profile</a></li>
+                    <li><a class="dropdown-item" href="./login/login.hbs">Logout</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- end: Navbar -->
+
+        <!-- start: Content -->
+        <div class="py-4">
+            <!-- start: Summary -->
+            <div class="row g-3">
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <a href="#"
+                        class="text-dark text-decoration-none bg-white p-3 rounded shadow-sm d-flex justify-content-between summary-primary">
+                        <div>
+                            <i class="ri-mail-send-fill summary-icon bg-primary mb-2"></i>
+                            <div>Email Sent</div>
+                        </div>
+                        <h4>200+</h4>
+                    </a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <a href="#"
+                        class="text-dark text-decoration-none bg-white p-3 rounded shadow-sm d-flex justify-content-between summary-indigo">
+                        <div>
+                            <i class="ri-shopping-cart-2-fill summary-icon bg-indigo mb-2"></i>
+                            <div>Sales Obtained</div>
+                        </div>
+                        <h4>2000+</h4>
+                    </a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <a href="#"
+                        class="text-dark text-decoration-none bg-white p-3 rounded shadow-sm d-flex justify-content-between summary-success">
+                        <div>
+                            <i class="ri-folder-user-fill summary-icon bg-success mb-2"></i>
+                            <div>New Clients</div>
+                        </div>
+                        <h4>100</h4>
+                    </a>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-3">
+                    <a href="#"
+                        class="text-dark text-decoration-none bg-white p-3 rounded shadow-sm d-flex justify-content-between summary-danger">
+                        <div>
+                            <i class="ri-store-line summary-icon bg-danger mb-2"></i>
+                            <div>Product Quantity</div>
+                        </div>
+                        <h4>200</h4>
+                    </a>
+                </div>
+
+            </div>
+            <!-- end: Summary -->
+            <div style="overflow-x:auto">
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col" width="100px">Name</th>
+                            <th scope="col" width="290px">Address</th>
+                            <th scope="col">Date</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Status</th>
+                            <th scope="col" width="70px">Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each orderList}}
+                        <tr>
+                            <td data-label="Due Date"><br>{{this.userId.username}}</td>
+                            {{#each this.listItem}}
+                            <td data-label="Amount">{{this.name}}</td>
+                            {{/each}}
+                            <td data-label="Period">{{this.userId.date}}</td>
+                            <td data-label="Price">{{this.userId.total}}</td>
+                            <td data-label="Amount" style="position: relative;"><span class="pe"></span>Processing
+                            </td>
+                            <td data-label="Period"><i class="fas fa-cog"></i>
+                                <i class="fa fa-angle-down ticon"></i>
+                            </td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
+            <!-- end: Graph -->
+        </div>
+        <!-- end: Content -->
+    </div>
+
+</main>
+<!-- end: Main -->
+
+<!-- start: JS -->
+<script src="/javascripts/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"
+    integrity="sha512-sW/w8s4RWTdFFSduOTGtk4isV1+190E/GghVffMA9XczdJ2MDzSzLEubKAs5h0wzgSJOQTRYyaz73L3d6RtJSg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="/javascripts/bootstrap.bundle.min.js"></script>
+<script src="/javascripts/admin.js"></script>
+<!-- end: JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script type="text/javascript">
+    $('li').click(function () {
+        $('li').removeClass("active");
+        $(this).addClass("active");
+    });
+</script>
