--- a/views/admin/home/admin.hbs
+++ b/views/admin/home/admin.hbs
@@ -78,12 +78,12 @@
                 </a>
                 <ul class="sidebar-dropdown-menu">
                     <li class="sidebar-dropdown-menu-item">
-                        <a href="./login/login.hbs">
+                        <a href="/login">
                             Login
                         </a>
                     </li>
                     <li class="sidebar-dropdown-menu-item">
-                        <a href="./login/login.hbs">
+                        <a href="/login">
                             Registration
                         </a>
                     </li>
@@ -150,7 +150,7 @@
                 </a>
             </li>
             <li class="sidebar-menu-item">
-                <a href="./calendar/calendar.hbs">
+                <a href="/admin/calendar">
                     <i class="ri-calendar-line sidebar-menu-item-icon"></i>
                     Calendar
                 </a>
